<Error>: CGContextSetLineDash: invalid dash array: at least one element must be non-zero https://bugs.webkit.org/show_bug.cgi?id=138555

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2016-10-10
Reviewed by Simon Fraser.

Ensure the dashArray has at least one non-zero element before calling
GraphicsContext::setLineDash(). Call GraphicsContext::setStrokeStyle()
instead, if the dashArray does not have one.

* rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::applyStrokeStyleToContext):

Canonical link: https://commits.webkit.org/181078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207030 268f45cc-cd09-0410-ab3c-d52691b4dbfc